<resources>
    <string name="app_name">Lawn Companion</string>
    <string name="welcomeMessage">Welcome to Lawn Companion!</string>
    <string name="nextButtonText">Next</string>
    <string name="getStartedText">Get Started</string>
    <string name="getStartedDescription">Get Started with the app</string>
    <string name="worryLess">Worry Less</string>
    <string name="SecondIntroMessage">
    Lawn Companion sends out a notification on an ideal day to
    cut your lawn!
    </string>
    <string name="saveTime">Save Time</string>
    <string name="ThirdIntroMessage">
    Lawn Companion takes relevant weather data for your lawn into account!
    </string>
    <string name="askForLocationMessage">
    But first, Lawn Companion needs to save the location of your lawn, so it can gather
        accurate weather data.
    </string>
    <string name="lawnLocationTitle">
        Save Lawn Location?
    </string>
    <string name="lawnLocationBodyText">
        Lawn Companion saves your location locally, so it can retrieve the relevant weather forecast for your lawn no matter where you are!
    </string>
    <string name="lawnLocationDisclaimer">
        Lawn Companion never shares your lawn location.
    </string>
    <string name="lawnLocationAccept">
        Yes, I am home
    </string>
    <string name="lawnLocationAcceptDescription">Accept saving lawn location</string>
    <string name="lawnLocationDeny">
        No, I am not home
    </string>
    <string name="lawnLocationDenyDescription">Deny saving lawn location</string>
    <string name="toastNoLocationPermission">
        Lawn Companion needs location permissions in order to save a lawn location!
    </string>
    <string name="viewPagerDescription">Intro screens</string>
    <string name="nextButtonDescription">Next</string>
    <string name="goodMorning">Good Morning!</string>
    <string name="goodAfternoon">Good Afternoon!</string>
    <string name="goodEvening">Good Evening!</string>
    <string name="goodNight">Good Night!</string>
    <string name="unsuitableWeatherMessage">The weather is not suitable for a cut. A notification won\'t be sent out.</string>
    <string name="suitableWeatherMessage">The weather is suitable for a cut.</string>
    <string name="expectNotificationMessage">Expect a notification soon.</string>
    <string name="skippedNotificationMessage">Today\'s notification has been skipped.</string>
    <string name="disabledNotificationsMessage">Notifications are disabled.</string>
    <string name="noConnectionAvailableWeatherMessage">The weather can\'t be checked as either a connection doesn\'t exist or doesn\'t match the preference chosen.</string>
    <string name="home">Home</string>
    <string name="cutLog">Cut Log</string>
    <string name="daysSinceLastCut">
    %1$d days since last cut
    </string>
    <string name="singleDaySinceLastCut">
    %1$d day since last cut
    </string>
    <string name="passedIntervalMessage">
        Your last cut has surpassed the cutting interval. You will likely
        need a cut.
    </string>
    <string name="noCutMessage">
    No cuts have been made yet. Add a new
    cut to get started!
    </string>
    <string name="needsPermissionString">
    Lawn Companion needs location permissions
    because it needs to access local weather.
    </string>
    <string name="openPermissionsText">
    Open Permissions
    </string>
    <string name="openPermissionsDescription">Open location permissions of app</string>
    <string name="alreadyCutMessage">
    No need to cut the lawn! An entry has
    been made today.
    </string>
    <string name="noConnectionAvailable">
    %2$d days since last cut. There will be
    no notifications/weather fetching done until
    a connection is made.
    </string>
    <string name="cuttingSeasonOver">
    The cutting season is over! Check back closer to cutting season, or you
    can manually turn it on in settings.
    </string>
    <string name="noLawnLocationMessage">There is no current lawn location saved. Add a location to receive notifications.</string>
    <string name="createLawnLocationButton">
        Create a lawn location
    </string>
    <string name="yearSpinnerDescription">Cut Entry Years</string>
    <string name="addCutFabDescription">Add Cut</string>
    <string name="addCutTitle">Add New Cut</string>
    <string name="enterMonthText">Enter Month:</string>
    <string name="enterDayText">Enter Day:</string>
    <string name="enterTimeText">Enter Time:</string>
    <string name="enterNoteDescription">Add note to cut entry (optional)</string>
    <string name="addCutText">Add Cut</string>
    <string name="futureCutsToastMessage">You cannot add future cuts!</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="backArrowDescription">Back arrow</string>
    <string name="monthSpinnerDescription">Months</string>
    <string name="daySpinnerDescription">Days</string>
    <string name="addCutButtonDescription">Add Cut</string>
    <string name="settingsTitle">Settings</string>
    <string name="generalPreferencesGroupTitle">General Preferences</string>
    <string name="cuttingSeasonPreferencesTitle">Cutting Season Preferences</string>
    <string name="aboutGroupTitle">About</string>
    <string name="cuttingSeasonTitle">Enable/disable cutting season</string>
    <string name="cuttingSeasonDesc">Manual override the default cutting season. Stops all
    notifications and weather checking. Useful for abnormal weather conditions or pausing app functionality</string>
    <string name="cuttingSeasonKey">inSeason</string>
    <string name="notificationsTitle">Notifications</string>
    <string name="notification_summary_on">Notifications will be sent
    </string>
    <string name="notification_summary_off">Notifications will not be sent</string>
    <string name="notificationDesc">Can be used if there\'s abnormal weather or you
    would like to postpone use.</string>
    <string name="notificationPreferenceKey">notificationSwitch</string>
    <string name="desiredCutFrequency">Desired Cut Frequency</string>
    <string name="lowestOptionFrequency">5 days</string>
    <string name="highestOptionFrequency">14 days</string>
    <string name="dataAccessTitle">Data Saver</string>
    <string name="weatherDataAccessTitle">Fetch weather while on data</string>
    <string name="data_summary_on">Weather will only be fetched while on Wi-Fi
    </string>
    <string name="data_summary_off">Weather will be fetched while on Wi-Fi or data</string>
    <string name="dataPreferenceKey">useData</string>
    <string name="createNewLocationTitle">Create a new lawn location</string>
    <string name="createNewLocationSummary">Removes the existing lawn location if one exists and creates a new lawn location</string>
    <string name="adjustWeatherCheckFrequencyTitle">Modify the frequency of weather checks</string>
    <string name="adjustWeatherCheckFrequencySummary">The time between weather checks and potential cut notifications if the weather is suitable for cutting.</string>
    <string name="weatherCheckFrequencyKey">weatherCheckFrequency</string>
    <string name="weatherCheckFrequencyDefault">15 minutes</string>
    <string name="desiredCutFrequencyTitle">Change the desired cut frequency</string>
    <string name="desiredCutFrequencySummary">The time between the previous cut and the next cut. Sometimes, it won\'t be exact due to weather.</string>
    <string name="desiredCutFrequencyKey">desiredCutFrequency</string>
    <string name="desiredCutFrequencyDefault">7</string>
    <string name="notificationTimeOfDayCategoryTitle">Timing of Notification Preference</string>
    <string name="morningTimeOfDayTitle">Morning (5am-12pm)</string>
    <string name="morningTimeOfDayKey">mornings</string>
    <string name="afternoonTimeOfDayTitle">Afternoon (12pm-5pm)</string>
    <string name="afternoonTimeOfDayKey">afternoons</string>
    <string name="eveningTimeOfDayTitle">Evening (5pm-9pm)</string>
    <string name="eveningTimeOfDayKey">evenings</string>
    <string name="nightTimeOfDayTitle">Night (9pm-5am)</string>
    <string name="nightTimeOfDayKey">nights</string>
    <string name="timeOfDaySummary">Check weather and send notifications only during this time</string>
    <string name="setCuttingSeasonDatesTitle">Set Cutting Season Dates</string>
    <string name="setCuttingSeasonDatesSummary">Modify the cutting season based on your climate and location.</string>
    <string name="versionNumber">Version 0.1</string>
    <string name="cutEntryRowDescription">Cut Entry row</string>
    <string name="completedCut">Completed Cut</string>
    <string name="noCutMade">No Cuts Made</string>
    <string name="cutEntryDetailsDialog">Cut Entry Details</string>
    <string name="cutEntryNote">Note:</string>
    <string name="noCutEntryNote">No note was made for this cut entry.</string>
    <string name="editCutEntryAction">Edit</string>
    <string name="alertTitle">Delete cut entry?</string>
    <string name="alertMessage">This will delete the selected cut entry from the Cut Log!</string>
    <string name="cancelOption">Cancel</string>
    <string name="deleteOption">Delete</string>
    <string name="editCutTitle">Edit Cut</string>
    <string name="saveButtonText">Save</string>
    <string name="markAsCut">Mark as cut</string>
    <string name="skipCut">Skip until tomorrow</string>
    <string name="cutSuggestionMessage">Hey, it\'s a great time to cut your lawn!</string>
    <string name="rainOnCutDayMessage">Hey, rain is expected near your next cutting day, so today would be a better time for a cut!</string>
    <string name="badWeatherOnCutDayMessage">Hey, bad weather is expected near your next cutting day, so today would be a better
        time for a cut!</string>
    <string name="moreThanOneCutMessage">Only one cut is allowed on a single day!</string>
    <string name="settings_icon">Settings icon</string>
    <string name="permissionDialogTitle">Access to background location</string>
    <string name="permissionDialogContent">Lawn Companion needs to access your location, so your lawn location can be saved!</string>
    <string name="title_activity_set_dates">SetDatesActivity</string>
    <string name="saveDatesActivityTitle">Modify cutting season dates</string>
    <string name="saveDatesButtonText">Save Dates</string>
    <string name="saveDatesButtonDescription">Save Cutting Season Dates</string>
    <string name="saveStartDate">Start Date:</string>
    <string name="saveEndDate">End Date:</string>
    <string name="startDateEditTextDefault">Enter start date here</string>
    <string name="endDateEditTextDefault">Enter end date here</string>
    <string name="datePlaceholder">%1$s/%2$s/%3$s</string>
    <string name="cutEntryIntentKey">cutEntry</string>
    <string name="moreThanOneCutToastMsg">You can\'t have more than one cut on the same day!</string>
    <string name="yearDropdownDescription">Select year value for cut log</string>
</resources>