<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/preferencesGroupTitle">

        <SwitchPreferenceCompat
            app:key="inSeason"
            android:defaultValue="true"
            app:title="@string/cuttingSeasonTitle"
            app:summary="@string/cuttingSeasonDesc"/>

        <SwitchPreferenceCompat
            app:dependency="inSeason"
            android:defaultValue="true"
            app:key="notificationSwitch"
            app:summaryOff="@string/notification_summary_off"
            app:summaryOn="@string/notification_summary_on"
            app:title="@string/notificationsTitle" />

<!--        <SeekBarPreference-->
<!--            app:title="@string/desiredCutFrequency" />-->

        <SwitchPreferenceCompat
            app:key="useData"
<<<<<<< HEAD
            android:defaultValue="false"
            app:summaryOff="@string/data_summary_off"
            app:summaryOn="@string/data_summary_on"
=======
            android:defaultValue="true"
            app:summaryOn="@string/data_summary_off"
            app:summaryOff="@string/data_summary_on"
>>>>>>> develop
            app:title="@string/weatherDataAccessTitle" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/aboutGroupTitle">

        <Preference android:title="Version"
            android:summary="@string/app_version">

        </Preference>


    </PreferenceCategory>

</PreferenceScreen>