<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SetDatesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:padding="5dp"
        android:theme="?attr/actionBarTheme"
        android:layout_gravity="top">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/backIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_baseline_arrow_back_24"
                android:contentDescription="@string/settings_icon" />

            <TextView
                android:id="@+id/setDatesActivityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"

                android:gravity="center|center_vertical"
                android:text="@string/saveDatesActivityTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <!--    Set start + end dates of the activity -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:theme="@style/Theme.Lawn_Companion.NoActionBar"
        android:background="@color/background_black">

        <TextView
            android:id="@+id/startDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="121dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingStart="15dp"
            android:text="@string/saveStartDate"
            android:textColor="@color/floral_white"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/startDateSelector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/floral_white"
            android:text="@string/startDateEditTextDefault"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:paddingStart="15dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startDateTextView"
            android:textAlignment="center"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/endDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="43dp"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/saveEndDate"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/floral_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startDateSelector" />

        <TextView
            android:id="@+id/endDateSelector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:paddingStart="25dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:text="@string/endDateEditTextDefault"
            android:textColor="@color/floral_white"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endDateTextView"
            android:textAlignment="center"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/saveDatesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="28dp"
            android:padding="12dp"
            android:text="@string/saveDatesButtonText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>